--- a/css/index.css
+++ b/css/index.css
@@ -21,5 +21,15 @@ header p{
 }
 
 .grid-container{
-    
+
+}
+
+.card{
+    border-radius: 0.5rem;
+    border: 1px solid black;
+    box-shadow: 0 0.5rem 1rem -0.5rem #333;
+}
+
+.card img{
+    margin-left: auto;
 }
