--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,10 @@ header p{
 }
 
 .grid-container{
-
+    display: grid;
+    width: 80vw;
+    margin: 0 10px 0;
+    grid-gap: 15px;
 }
 
 .card{
@@ -33,3 +36,31 @@ header p{
 .card img{
     margin-left: auto;
 }
+
+@media screen and (min-width: 800px) {
+    .grid-container{
+        grid-template-columns: 1fr 1fr 1fr;
+        margin: auto;
+    }
+
+    .card:nth-of-type(1){
+        grid-column: 1 / 2;
+        grid-row: 2 / 4;
+    }
+    
+    .card:nth-of-type(2){
+        grid-column: 2 / 3;
+        grid-row: 1 / 3;
+    }
+    
+    .card:nth-of-type(3){
+        grid-column: 2 / 3;
+        grid-row: 3 / 5;
+    }
+    
+    .card:nth-of-type(4){
+        grid-column: 3 / 4;
+        grid-row: 2 / 4;
+    }
+}
+
